2008-03-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.

        Improve dumping of bytecode and fix coding style accordingly.
        
        Registers are printed as lr1 for locals, tr1 for temp registers. Identifiers print as
        foobar(@id0) and constants print as "foo"(@k1) or 312.4(@k2) or the like. Constant and
        identifier tables are dumped for reference.
        
        * VM/CodeBlock.cpp:
        (KJS::escapeQuotes):
        (KJS::valueToSourceString):
        (KJS::registerName):
        (KJS::constantName):
        (KJS::idName):
        (KJS::printUnaryOp):
        (KJS::printBinaryOp):
        (KJS::CodeBlock::dump):
        * VM/Machine.cpp:
        (KJS::resolve):
        (KJS::resolveBase):
        (KJS::Machine::privateExecute):

2008-03-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        Implement StringNode and VoidNode (both pretty trivial).

        * kjs/nodes.cpp:
        (KJS::StringNode::emitCode):
        (KJS::VoidNode::emitCode):
        * kjs/nodes.h:

2008-03-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Sam.

        Implement CommaNode.
        
        * kjs/nodes.cpp:
        (KJS::CommaNode::emitCode):
        * kjs/nodes.h:

2008-03-30  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Adds support for dot notation and object literals.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitNewObject):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::ObjectLiteralNode::emitCode):
        (KJS::PropertyListNode::emitCode):
        (KJS::DotAccessorNode::emitCode):
        (KJS::AssignDotNode::emitCode):
        * kjs/nodes.h:

2008-03-29  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        